--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 before_install: cd tests
 
 install:
+  - pip install enum34
   - sudo pip install conda
   - sudo conda init
   - while read requirement; do conda install --yes $requirement; done < requirements.txt
