--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 
 python:
   - "2.7"
-  - "3.3"
 before_install: cd tests
 install:
   # Install conda
+  - sudo pip install --upgrade pip enum34
   - sudo pip install conda
   # install deps
   - sudo conda init
