--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ before_install: cd tests
 install:
   # Install conda
   - sudo pip install --upgrade pip enum34
+  - sudo pip install ruamel.yaml 
+  - sudo pip install pycoast
   - sudo pip install conda
   # install deps
   - sudo conda init
   - sudo conda update conda --yes
-  - deps='pip numpy pandas requests nose numpydoc sphinx'
+  - deps='pip numpy pandas requests'
   - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
   - export PATH=$HOME/py/bin:$PATH
   # install your own package into the environment
