--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ install:
   - sudo pip install ruamel.yaml 
   - sudo pip install pycoast
   - sudo pip install conda
+  - sudo pip install requests
+  - sudo pip install urllib3 
   # install deps
   - sudo conda init
   - sudo conda update conda --yes
