--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,28 @@
 sudo: true
 language: python
-
 python:
   - "2.7"
 before_install: cd tests
 install:
-  # Install conda
-  - sudo pip install --upgrade pip enum34
-  - sudo pip install ruamel.yaml 
-  - sudo pip install pycosat
-  - sudo pip install conda
-  - sudo pip install requests
-  - sudo pip install urllib3
-  # install deps
-  - deps='pip numpy pandas requests'
-  - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
-  - export PATH=$HOME/py/bin:$PATH
-  # install your own package into the environment
+  - sudo apt-get update
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas requests ...
+  - source activate test-environment
   - pip install -r ../requirements.txt
 script:
   - coverage run tests.py
