--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: true
 language: python
 python:
   - "2.7"
-before_install: cd tests
 install:
   - sudo apt-get update
   # We do this conditionally because it saves us some downloading if the
@@ -19,11 +18,14 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas requests
   - source activate test-environment
   - pip install -r ../requirements.txt
+  - python setup.py install
+
+before_script:
+  - cd tests
 
 script:
   - coverage run tests.py
