--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 codecov==2.0.5
 coloredlogs==5.2
 coverage==4.2
-ipdb==0.10.1
 numpy==1.11.1
 pandas==0.19.0
 pytest_cov==2.4.0
 requests==2.11.1
+setuptools==28.2.0
 tabulate==0.7.7
