Support a multiple behaviours

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ tests/*.csv
 /pysocialwatcher/input_examples/gcc_health_with_and.json
 /pysocialwatcher/input_examples/recollection_health_awareness.json
 /pysocialwatcher/input_examples/doha_subregions.json
+/pysocialwatcher/input_examples/recollection_health_awareness_placebos.json
